Коммит от 30 ноября V1.2

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,8 @@ html {
 }
 
 .page {
+  display: flex;
+  place-content: center;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -58,7 +60,7 @@ ol {
 }
 
 .button {
-  height: 34px;
+  min-height: 34px;
   color: #fff;
   background-color: transparent;
   border: 1px solid #fff;
@@ -66,12 +68,24 @@ ol {
   font-size: 18px;
   font-weight: 700;
   line-height: 21.6px;
-  }
+}
   
 .button:hover {
   text-decoration: underline;
   text-underline-offset: 3px;
-  }
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+}
+
+.button:active {
+  background-color: #545050;
+  }  
 
 .visually-hidden {
   position: absolute;
@@ -85,12 +99,12 @@ ol {
 
 /*______________________________Левая часть страницы ниже______________________________*/
 
-/*-----Секция с видео-----*/
 .result {
   display: grid;
   gap: 16px;
 }
 
+/*-----Секция с видео-----*/
 .result__video-container {
   position: relative;
   width: 711px;
@@ -148,6 +162,14 @@ input {
 width: fit-content;
 }
 
+.search-form__label:focus{
+  outline: none;
+}
+
+.search-form__label:focus-visible{
+  outline: 1px solid #fff;
+}
+
 .search-form__label:has(:focus-visible) {
   outline: 1px solid #fff;
 }
@@ -171,15 +193,15 @@ width: fit-content;
 }
 
 input[type='checkbox']+.search-form__pseudo-checkbox {
-  width: 19px;
-  height: 19px;
+  min-width: 19px;
+  min-height: 19px;
   border: 1px solid #fff;
 }
 
 input[type='checkbox']:checked + .search-form__pseudo-checkbox:before {
   content: '';
-  width: 15px;
-  height: 15px;
+  min-width: 15px;
+  min-height: 15px;
   background: #fff;
 }
 
@@ -191,17 +213,13 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox:before {
 .search-form__submit-button {
   align-self: flex-end;
   min-width: 194px;
-  }
-
-.search-form__submit-button:active{
-  background-color: #545050;
-  }  
+  } 
   
 /*______________________________Правая часть страницы ниже______________________________*/
 /*-----Секция с заголовком-----*/
 .title {
-  width: 260px;
-  height: 210px;
+  min-width: 260px;
+  min-height: 210px;
   font-family: Oswald, sans-serif;
   font-size: 75px;
   font-weight: 700;
@@ -237,8 +255,16 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox:before {
 }
 
 .content__video-card-thumbnail {
-  width: 194px;
-  height: 103px;
+  max-width: 194px;
+  max-height: 103px;
+}
+
+.content__video-card:focus {
+  outline: none;
+}
+
+.content__video-card:focus-visible {
+  outline: 1px solid #fff;
 }
 
 .content__video-card:has(:focus-visible) {
@@ -252,13 +278,12 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox:before {
   line-height: 30px;
   text-transform: uppercase;
   color: #fff;
-  width: 200px;
 }
 
 .content__video-card-description-container {
-  width: 200px;
-  text-overflow: ellipsis;
+  min-width: 200px;
   white-space: nowrap;
+  text-overflow: ellipsis;
   overflow: hidden;
 }
 
