Коммит от 30 ноября V1.2

--- a/styles/style.css
+++ b/styles/style.css
@@ -47,7 +47,7 @@ ol {
   grid-template-columns: 711px 1fr;
   max-height: 534px;
   height: 100%;
-  margin: 133px 30px 0;
+  margin: 133px 30px;
   background: #1B1919;
   gap: 30px;
   align-items: end;
