--- a/styles/style.css
+++ b/styles/style.css
@@ -15,9 +15,9 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
-  background-color: #1B1919;
+  background-color: #1b1919;
 }
 
 h1,
@@ -39,16 +39,14 @@ ol {
   list-style: none;
 }
 
-
 /*-----Общее-----*/
 .content {
-  background-color: #1B1919;
+  background-color: #1b1919;
   display: grid;
-  grid-template-columns: 711px 1fr;
-  max-height: 534px;
+  grid-template-columns: 1fr 399px;
+  min-height: 534px;
   height: 100%;
-  margin: 133px 30px;
-  background: #1B1919;
+  background: #1b1919;
   gap: 30px;
   align-items: end;
 }
@@ -65,12 +63,12 @@ ol {
   color: #fff;
   background-color: transparent;
   border: 1px solid #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 21.6px;
 }
-  
+
 .button:hover {
   text-decoration: underline;
   text-underline-offset: 3px;
@@ -86,7 +84,8 @@ ol {
 
 .button:active {
   background-color: #545050;
-  }  
+  text-decoration: none;
+}
 
 .visually-hidden {
   position: absolute;
@@ -102,7 +101,7 @@ ol {
 
 .result {
   display: grid;
-  gap: 16px;
+  gap: 12px;
 }
 
 /*-----Секция с видео-----*/
@@ -113,10 +112,10 @@ ol {
 }
 
 .result__video {
-width: 100%;
-height: 100%;
-object-fit: cover;
-object-position: center;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 /*-----Секция с полем ввода-----*/
@@ -131,43 +130,40 @@ object-position: center;
 }
 
 .search-form__fieldset-title {
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 30px;
 }
 
 .search-form__textfield {
+  min-width: 225px;
   background-color: transparent;
   border: none;
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
-  line-height: 21.6px;
+  line-height: 25px;
   color: #fff;
 }
 
-input {
-  min-width: 225px;
-}
-
 ::placeholder {
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   line-height: 21.6px;
   color: rgba(255, 255, 255, 0.7);
 }
 
-.search-form__label{
-width: fit-content;
+.search-form__label {
+  width: fit-content;
 }
 
-.search-form__label:focus{
+.search-form__label:focus {
   outline: none;
 }
 
-.search-form__label:focus-visible{
+.search-form__label:focus-visible {
   outline: 1px solid #fff;
 }
 
@@ -176,11 +172,6 @@ width: fit-content;
 }
 
 /*-----Секция с чекбоксами-----*/
-.search-form__label:hover .search-form__label-text {
-  text-decoration: underline;
-  text-underline-offset: 3px;
-}
-
 .search-form__checkbox-list {
   display: flex;
   gap: 16px;
@@ -193,29 +184,38 @@ width: fit-content;
   vertical-align: middle;
 }
 
-input[type='checkbox']+.search-form__pseudo-checkbox {
+.search-form__checkbox + .search-form__pseudo-checkbox {
   min-width: 19px;
   min-height: 19px;
   border: 1px solid #fff;
 }
 
-input[type='checkbox']:checked + .search-form__pseudo-checkbox:before {
-  content: '';
+.search-form__checkbox:checked + .search-form__pseudo-checkbox:before {
+  content: "";
   min-width: 15px;
   min-height: 15px;
   background: #fff;
 }
 
-.search-form__label-text{
+.search-form__label-text {
   user-select: none;
+}
+
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
+.search-form__label:active .search-form__label-text {
+  text-decoration: none;
 }
 
 /*-----Секция с кнопкой "Найти"-----*/
 .search-form__submit-button {
   align-self: flex-end;
   min-width: 194px;
-  } 
-  
+}
+
 /*______________________________Правая часть страницы ниже______________________________*/
 /*-----Секция с заголовком-----*/
 .title {
@@ -235,9 +235,10 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox:before {
 
 /*-----Секция с карточками-----*/
 .content__details {
-  height: 534px;
   display: grid;
-  gap: 26px;  
+  gap: 20px;
+  max-height: 534px;
+  height: 100%;
 }
 
 .content__list {
@@ -246,18 +247,20 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox:before {
 }
 
 .content__list-item:not(:last-child) {
-  margin-bottom: 30px;
+  margin-bottom: 35px;
 }
 
 .content__video-card {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 194px;
   justify-content: space-between;
 }
 
 .content__video-card-thumbnail {
-  max-width: 194px;
+  width: 100%;
   max-height: 103px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .content__video-card:focus {
@@ -269,33 +272,38 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox:before {
 }
 
 .content__video-card:has(:focus-visible) {
- outline: 1px solid #fff;
+  outline: 1px solid #fff;
 }
- 
+
+.content__video-card:hover {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
+.content__video-card:active {
+  background-color: #545050;
+  text-decoration: none;
+}
+
 .content__video-card-title {
   font-family: Oswald, sans-serif;
   font-size: 30px;
   font-weight: 700;
-  line-height: 30px;
+  line-height: 36px;
   text-transform: uppercase;
   color: #fff;
-}
-
-.content__video-card-description-container {
-  min-width: 200px;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
 }
 
-.content__video-card-description:hover {
-  text-decoration: underline;
-  text-underline-offset: 3px;
+.content__video-card-description-container {
+  min-width: 190px;
 }
 
 .content__card-link {
   display: block;
-  margin: 2px;
+  margin: 3px;
 }
 
 .content__card-link_current {
